feat: update entites

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=api_event_planning
+spring.datasource.url=jdbc:postgresql://localhost:5432/event-planning
+spring.datasource.username=wesley
+spring.datasource.password=password
