feat: create database localhost

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,31 @@
+# Nome da aplicação
 spring.application.name=api_event_planning
+
+# Porta do servidor
+server.port=8081
+
+# Configuração do banco de dados PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/event-planning
 spring.datasource.username=wesley
 spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Configuração do Flyway
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.validate-on-migrate=false
+spring.flyway.locations=classpath:db/migration
+
+# JPA / Hibernate - Configuração do fornecedor de JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Log - Configuração de log do Spring Boot
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=trace
+
+
+
+
