--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,11 @@ logging.level.org.springframework.web=INFO
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=trace
 
+#Local do bucket S3 na AWS
+aws.region=us-east-1
+
+aws.bucket.name=eventostec-imagens
+
 
 
 
