feat: update AWSconfig "Upload S3 funcional"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/event-planning
 spring.datasource.username=wesley
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 
 # Configuração do Flyway
 spring.flyway.enabled=true
@@ -26,10 +28,16 @@ logging.level.org.springframework.web=INFO
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=trace
 
-#Local do bucket S3 na AWS
-aws.region=us-east-1
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
 
-aws.bucket.name=eventostec-imagens
+
+#Local do bucket S3 na AWS
+aws.region=us-east-2
+
+aws.bucket.name=eventos-imagens-dev
+
+
 
 
 
