--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,44 +1,8 @@
-# Nome da aplicação
 spring.application.name=api_event_planning
 
-# Porta do servidor
-server.port=8081
+spring.datasource.url=jdbc:postgresql://event-planning-postgre.c9o6oueealw0.us-east-2.rds.amazonaws.com/postgres
+spring.datasource.username=postgres
+spring.datasource.password=yfH6R)).#T*2T6b4ZVO9r~hDrY1G
 
-# Configuração do banco de dados PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/event-planning
-spring.datasource.username=wesley
-spring.datasource.password=password
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-
-# Configuração do Flyway
-spring.flyway.enabled=true
-spring.flyway.baseline-on-migrate=true
-spring.flyway.validate-on-migrate=false
-spring.flyway.locations=classpath:db/migration
-
-# JPA / Hibernate - Configuração do fornecedor de JPA
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-# Log - Configuração de log do Spring Boot
-logging.level.org.springframework.web=INFO
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql=trace
-
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=5
-
-
-#Local do bucket S3 na AWS
 aws.region=us-east-2
-
 aws.bucket.name=eventos-imagens-dev
-
-
-
-
-
-
